--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "15.5.13",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.6",
     "raw-loader": "4.0.2",
     "tailwindcss": "^4",
     "tw-animate-css": "1.3.6",
